# thermoSol

./: CMakeLists.txt  README.md  TheromSol.sln
Json/: Json.vcxproj  Json.vcxproj.filters  json.h
PhaseEquil/: AntoineModel.cpp  AntoineModel.h  CMakeLists.txt  Constants.h  ExcessGibbsEnergyModel.h  FugacityCoefficientModel.h  GammaPhiVLE.cpp  GammaPhiVLE.h  IdealGasMixtureModel.cpp  IdealGasMixtureModel.h  Matrix.h  NRTL.cpp  NRTL.h  PhaseEquil.vcxproj  PhaseEquil.vcxproj.filters  RunTimeSelector.h  Specie.cpp  Specie.h  Species.cpp  Species.h  SpeciesFactory.cpp  SpeciesFactory.h  Utility.cpp  Utility.h  VLE.h  VaporPressureModel.h  dllHeader.h
TheromSol/: CMakeLists.txt  TheromSol.vcxproj  TheromSol.vcxproj.filters  dataBank.json  main.cpp
tests/: CMakeLists.txt  Matrix.cpp  VaporPressure.cpp  runTests.cpp  tests.vcxproj
